--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Unica+One&display=swap');
+
 /*
   Inject Tailwind's base styles and use the Tailwind Macro to use
   the rest of Tailwind's classes in the project
